--- a/style.css
+++ b/style.css
@@ -121,7 +121,15 @@
 .vertenza h1 {
     margin-top: 1%;
     margin-bottom: 0%;
-    padding: 0px 0px 0px 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+.vero ul {
+    margin-top: 1%;
+    margin-bottom: 0%;
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 .data {
