--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+.sopra {
+    background-image: url(SITOCGIL.jpg);
+    background-repeat: no-repeat;
+    background-size: 150%;
+    background-position-x: right;
+}
+
 .iscrizione {
     text-align: center;
     padding-top: 4%;
@@ -47,6 +54,30 @@
 .papero5 {
     border: 5px solid purple;
     background-color: violet;
+    margin-bottom: 5px;
+    padding-right: 2%;
+    padding-left: 2%;
+}
+
+.papero6 {
+    border: 5px solid orangered;
+    background-color: rgba(255, 69, 0, 0.8);
+    margin-bottom: 5px;
+    padding-right: 2%;
+    padding-left: 2%;
+}
+
+.papero7 {
+    border: 5px solid yellow;
+    background-color: rgba(255, 255, 0, 0.4);
+    margin-bottom: 5px;
+    padding-right: 2%;
+    padding-left: 2%;
+}
+
+.papero8 {
+    border: 5px solid green;
+    background-color: rgba(0, 128, 0, 0.4);
     margin-bottom: 5px;
     padding-right: 2%;
     padding-left: 2%;
@@ -143,7 +174,7 @@
     padding-bottom: 2%;
 }
 
-.papero6 {
+.papero6k {
     border-top: 5px solid red;
     border-left: 5px solid red;
     border-right: 5px solid red;
@@ -154,7 +185,7 @@
     padding-left: 2%;
 }
 
-.papero7 {
+.papero7k {
     border-top: 5px solid red;
     border-left: 5px solid red;
     border-right: 5px solid red;
@@ -165,7 +196,7 @@
     padding-left: 2%;
 }
 
-.papero8 {
+.papero8k {
     border-top: none;
     border-left: 5px solid red;
     border-right: 5px solid red;
@@ -174,8 +205,4 @@
     margin-bottom: 5px;
     padding-right: 2%;
     padding-left: 2%;
-}
-
-.vero {
-    margin-top: 2%;
 }
