--- a/style.css
+++ b/style.css
@@ -91,54 +91,63 @@
     background-color: white;
     padding-left: 2%;
     padding-right: 2%;
+    text-align: left;
 }
 
 .penna1 {
     background-color: white;
     padding-left: 2%;
     padding-right: 2%;
+    text-align: left;
 }
 
 .penna2 {
     background-color: white;
     padding-left: 2%;
     padding-right: 2%;
+    text-align: left;
 }
 
 .penna3 {
     background-color: white;
     padding-left: 2%;
     padding-right: 2%;
+    text-align: left;
 }
 
 .penna4 {
     background-color: white;
     padding-left: 2%;
     padding-right: 2%;
+    text-align: left;
 }
 
 .penna5 {
     background-color: white;
     padding-left: 2%;
     padding-right: 2%;
+    text-align: left;
 }
 
 .penna6 {
     background-color: white;
     padding-left: 2%;
     padding-right: 2%;
+    text-align: left;
 }
 
 .penna7 {
     background-color: white;
     padding-left: 2%;
     padding-right: 2%;
+    text-align: left;
 }
 
 .penna8 {
     background-color: white;
     padding-left: 2%;
     padding-right: 2%;
+    text-align: left;
 }
 
 .iscrizione img:hover {
